package restaurante.modelo;

public interface Verificavel {
    boolean validar(String codigo);
    void solicitarNovo();
}
